kubernetes/network-policies/allow-dvwa.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-dvwa-http
  namespace: dev

spec:
  podSelector:
    matchLabels:
      app: dvwa

  policyTypes:
    - Ingress

  ingress:
    - ports:
        - protocol: TCP
          port: 80
